Adjusted text margins and fixed footer spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,37 +11,33 @@
 html,
 body {
   height: 100%;
-  color: white;
 }
 
 h1 {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 16px;
 }
 
 h2 {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 16px;
 }
 
 h3 {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 16px;
 }
 
 h4 {
     margin-top: 0;
-    margin-bottom: 0;
 }
 
 h5 {
     margin-top: 0;
-    margin-bottom: 0;
 }
 
 p {
     margin-top: 0;
-    margin-bottom: 0;
 }
 
 .view-frame {
@@ -63,8 +59,11 @@ p {
     top: 30%;
 }
 
+#header #header-text h1 {
+    color: rgba(255, 255, 255, 1.0);
+}
+
 #header #header-text h4 {
-    margin-top: 16px;
     color: rgba(255, 255, 255, 0.7);
 }
 
